@@ -1096,6 +1096,9 @@ TeststringobjCmd(
 		goto wrongNumArgs;
 	    }
 	    if (varPtr[varIndex] != NULL) {
+		if ((varPtr[varIndex])->typePtr != &tclStringType) {
+		    Tcl_ConvertToType(NULL, varPtr[varIndex], &tclStringType);
+		}
 		strPtr = (TestString *)
 		    (varPtr[varIndex])->internalRep.otherValuePtr;
 		length = (int) strPtr->allocated;
@@ -1149,6 +1152,9 @@ TeststringobjCmd(
 		goto wrongNumArgs;
 	    }
 	    if (varPtr[varIndex] != NULL) {
+		if ((varPtr[varIndex])->typePtr != &tclStringType) {
+		    Tcl_ConvertToType(NULL, varPtr[varIndex], &tclStringType);
+		}
 		strPtr = (TestString *)
 		    (varPtr[varIndex])->internalRep.otherValuePtr;
 		length = (int) strPtr->uallocated;
